--- a/SomeChess/wwwroot/css/output.css
+++ b/SomeChess/wwwroot/css/output.css
@@ -696,6 +696,10 @@ video {
   height: 1.25rem;
 }
 
+.h-5\/6 {
+  height: 83.333333%;
+}
+
 .h-52 {
   height: 13rem;
 }
@@ -710,10 +714,6 @@ video {
 
 .h-screen {
   height: 100vh;
-}
-
-.h-5\/6 {
-  height: 83.333333%;
 }
 
 .w-1 {
@@ -732,8 +732,16 @@ video {
   width: 0.75rem;
 }
 
+.w-3\/6 {
+  width: 50%;
+}
+
 .w-4 {
   width: 1rem;
+}
+
+.w-4\/5 {
+  width: 80%;
 }
 
 .w-5 {
@@ -761,6 +769,14 @@ video {
   width: 100vw;
 }
 
+.w-1\/2 {
+  width: 50%;
+}
+
+.w-full {
+  width: 100%;
+}
+
 .border-collapse {
   border-collapse: collapse;
 }
@@ -783,6 +799,10 @@ video {
   flex-direction: column;
 }
 
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
 .place-content-evenly {
   place-content: space-evenly;
 }
@@ -793,6 +813,10 @@ video {
 
 .items-center {
   align-items: center;
+}
+
+.justify-start {
+  justify-content: flex-start;
 }
 
 .justify-center {
@@ -1211,4 +1235,8 @@ video {
 
 .move-history {
   overflow: scroll;
+}
+
+.d-block {
+  display: block;
 }
